logs/logs_cargo/excepcion_cargo_2023-07-11_21-48-59.log
2023-07-11 21:48:59,917 - Thread-89 (process_request_thread) - MainProcess - ERROR - Ocurrio una excepcion:Invalid block tag on line 74: 'endfor', expected 'elif', 'else' or 'endif'. Did you forget to register or load this tag?
Traceback (most recent call last):
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 505, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endfor'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\CLINICA\views_api\views_cargos.py", line 214, in buscar_cargos
    return render(request, 'cargos/buscarCargo.html', {'cargos': cargos, 'mensaje': mensaje,'reportes_lista':DatosReportes.cargar_lista_cargos(),'reportes_usuarios':DatosReportes.cargar_usuario(),'permisos':cargar_datos()})
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\loader_tags.py", line 232, in do_block
    nodelist = parser.parse(("endblock",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\defaulttags.py", line 953, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\defaulttags.py", line 853, in do_for
    nodelist_loop = parser.parse(
                    ^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\defaulttags.py", line 953, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 507, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "C:\Users\nblad\Desktop\Nueva carpeta (2)\ISI_2023_I_P_CLINICAMR_FRONT_DEPLOY\venv\Lib\site-packages\django\template\base.py", line 558, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 74: 'endfor', expected 'elif', 'else' or 'endif'. Did you forget to register or load this tag?
